--- a/Math.ipynb
+++ b/Math.ipynb
@@ -56,7 +56,7 @@
     "Подставляем и сокращаем:\n",
     "\n",
     "$$\n",
-    "y' = \\frac{3x^{2} \\ln{x} - \\frac{x^{3}}{x}}{(\\ln{x})^2} = \\frac{3x^2 - x^2}{\\ln{x}} = \\frac{2x^2}{\\ln{x}}\n",
+    "y' = \\frac{3x^{2} \\ln{x} - \\frac{x^{3}}{x}}{(\\ln{x})^2} = \\frac{3x^2}{\\ln{x}} - \\frac{x^2}{\\ln^2{x}}\n",
     "$$"
    ]
   },
